[package]
name = "rust"
version = "0.1.0"
authors = ["Nathaniel Saxe <NathanielSaxophone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.0"
derive_more = "0.99.3"
image = "0.23.2"
num-complex = "0.2.4"